Added translation dropdown

--- a/src/assets/i18n/de.json
+++ b/src/assets/i18n/de.json
@@ -1,5 +1,6 @@
 {
     "COMMON": {
-        "WELCOME_MESSAGE": "Siema kurwy"
+        "WELCOME_MESSAGE": "Siema kurwy",
+        "SELECT_LANGUAGE": "Sprache wahlen"
     }
 }
