--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -1,5 +1,6 @@
 {
     "COMMON": {
-        "WELCOME_MESSAGE": "Hey you guys!"
+        "WELCOME_MESSAGE": "Hey you guys!",
+        "SELECT_LANGUAGE": "Select language"
     }
 }
