--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -1,6 +1,7 @@
 {
     "COMMON": {
         "WELCOME_MESSAGE": "Hey you guys!",
-        "SELECT_LANGUAGE": "Select language"
+        "SELECT_LANGUAGE": "Select language",
+        "LANGUAGE": "EN"
     }
 }
