--- a/src/assets/i18n/de.json
+++ b/src/assets/i18n/de.json
@@ -1,6 +1,7 @@
 {
     "COMMON": {
         "WELCOME_MESSAGE": "Siema kurwy",
-        "SELECT_LANGUAGE": "Sprache wahlen"
+        "SELECT_LANGUAGE": "Sprache wahlen",
+        "LANGUAGE": "DE"
     }
 }
