Added font awesome, footer and basic structure of the contact components

--- a/src/assets/i18n/de.json
+++ b/src/assets/i18n/de.json
@@ -3,5 +3,13 @@
         "WELCOME_MESSAGE": "Siema kurwy",
         "SELECT_LANGUAGE": "Sprache wahlen",
         "LANGUAGE": "DE"
+    },
+    "CONTACT": {
+        "HEADER": "KONTAKT & SOZIAL MEDIEN",
+        "TELEPHONE": "Telefon",
+        "SOCIAL_MEDIA": "Sozial Median"
+    },
+    "FOOTER": {
+        "SIGNATURE": "Hergestellt in DDR ©"
     }
 }
