--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -1,4 +1,10 @@
 {
+    "NAVIGATION": {
+        "WELCOME": "Welcome",
+        "MY_STORY": "My Story",
+        "CONTACT": "Contact",
+        "SERVICES": "Services"
+    },
     "COMMON": {
         "WELCOME_MESSAGE": "Hey you guys!",
         "SELECT_LANGUAGE": "Select language",
@@ -7,11 +13,11 @@
     "WELCOME": {
         "WELCOME_PART_ONE": "A unique",
         "APPROACH": "approach",
-        "WELCOME_PART_TWO": "towards Microblading",
+        "WELCOME_PART_TWO": "towards natural beauty",
         "SECOND_WELCOME": "Amazing beauty experience that's tailored to you!"
     },
     "STORY": {
-        "HEADER": "OUR STORY"
+        "HEADER": "My Story"
     },
     "REVIEWS": {
         "HEADER": "What Our Clients Say"
@@ -19,7 +25,12 @@
     "CONTACT": {
         "HEADER": "CONTACT & MEDIA",
         "TELEPHONE": "Telephone",
-        "SOCIAL_MEDIA": "Social Media"
+        "SOCIAL_MEDIA": "Social Media",
+        "EMAIL": "Email"
+    },
+    "SERVICES": {
+        "HEADER": "MY SERVICES",
+        "SMALL_HEADER": "Pernament make-up and anti aging treatments"
     },
     "FOOTER": {
         "SIGNATURE": "Designed and built by PM Software ©"
