Added description in services component

--- a/src/assets/i18n/de.json
+++ b/src/assets/i18n/de.json
@@ -26,7 +26,8 @@
     },
     "SERVICES": {
         "HEADER": "MEINE ANGEBOT",
-        "SMALL_HEADER": "Pernament Make-up und Anti-Aging-Behandlungen"
+        "SMALL_HEADER": "Pernament Make-up und Anti-Aging-Behandlungen",
+        "BOOK": "Book a visit"
     },
     "FOOTER": {
         "SIGNATURE": "Entwickelt und erstellt von PM Software ©"
